compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_call_no_parens.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "module m\n    export opaque t, f\n    type t : int\n    fcn f : t loop end loop end f\n\n    var a : int := f\nend m\n\n% should fail\nvar b : int := m.f\n"

---
"m"@(FileId(1), 7..8) [Declared]: <error>
"t"@(FileId(1), 41..42) [Resolved(Type)]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"f"@(FileId(1), 57..58) [Declared]: function -> opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"a"@(FileId(1), 92..93) [Declared]: int
"t"@(FileId(1), 27..28) [ItemExport(LocalDefId(1))]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"f"@(FileId(1), 30..31) [ItemExport(LocalDefId(2))]: function -> opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"b"@(FileId(1), 130..131) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 141..144: mismatched types
| note in file FileId(1) for 141..144: this is of type `function : t (an opaque type)`
| note in file FileId(1) for 134..137: this is of type `int`
| info: `function : t (an opaque type)` is not assignable into `int`
