compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_call_param.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "module m\n    export opaque t, a, p\n    type t : int\n    proc p(a : t) end p\n    var a : t\n\n    % should be coercible\n    m.p(a)\n    m.p(69)\nend m\n\n% should be fine\nvar a := m.a\nm.p(a)\n% shouldn't be fine\nm.p(2)\n"

---
"m"@(FileId(1), 7..8) [Declared]: <error>
"t"@(FileId(1), 44..45) [Resolved(Type)]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"p"@(FileId(1), 61..62) [Declared]: procedure ( pass(value) opaque[DefId(LibraryId(0), LocalDefId(1))] type to int, ) -> void
"<unnamed>"@(dummy) [Declared]: <error>
"a"@(FileId(1), 63..64) [Declared]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"a"@(FileId(1), 84..85) [Declared]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"t"@(FileId(1), 20..28) [ItemExport(LocalDefId(1))]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"a"@(FileId(1), 30..31) [ItemExport(LocalDefId(5))]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"p"@(FileId(1), 33..34) [ItemExport(LocalDefId(2))]: procedure ( pass(value) opaque[DefId(LibraryId(0), LocalDefId(1))] type to int, ) -> void
"a"@(FileId(1), 168..169) [Declared]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 208..209: mismatched types
| note in file FileId(1) for 208..209: this is of type `{integer}`
| note in file FileId(1) for 208..209: parameter expects type `t (an opaque type)`
| info: `{integer}` is not assignable into `t (an opaque type)`
