compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_call_parens.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "module m\n    export opaque t, f\n    type t : int\n    fcn f() : t loop end loop end f\n\n    var a : int := f()\nend m\n\n% should fail\nvar b : int := m.f()\n"
---
"m"@(FileId(1), 7..8) [Module(No)]: <error>
"t"@(FileId(1), 41..42) [Type]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"f"@(FileId(1), 57..58) [Subprogram(Function)]: function ( ) -> opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"a"@(FileId(1), 94..95) [ConstVar(Var, No)]: int
"b"@(FileId(1), 134..135) [ConstVar(Var, No)]: int
"<unnamed>"@(dummy) [Undeclared]: <error>
"t"@(FileId(1), 27..28) [Export]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"f"@(FileId(1), 30..31) [Export]: function ( ) -> opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 145..150: mismatched types
| note in file FileId(1) for 145..150: this is of type `t (an opaque type)`
| note in file FileId(1) for 138..141: this is of type `int`
| info: `t (an opaque type)` is not assignable into `int`
