compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_constvar.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "module m\n    export opaque t, ~.* a\n    type t : char\n\n    var a : t := 'c'\nend m\n\n% Hidden type shouldn't be leaked\nvar b := a\nb := 'c'\n"

---
"m"@(FileId(1), 7..8) [Declared]: <error>
"t"@(FileId(1), 45..46) [Resolved(Type)]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"a"@(FileId(1), 63..64) [Declared]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"t"@(FileId(1), 27..28) [ItemExport(LocalDefId(1))]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"a"@(FileId(1), 34..35) [ItemExport(LocalDefId(2))]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"b"@(FileId(1), 121..122) [Declared]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to char
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 130..132: mismatched types
| note in file FileId(1) for 133..136: this is of type `char`
| note in file FileId(1) for 128..129: this is of type `t (an opaque type)`
| info: `char` is not assignable into `t (an opaque type)`
