compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_deref.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "module m\n    export opaque t, a\n    type t : int\n    var a : ^t\n    var b : int := ^a\nend m\n\nvar b := m.a\n% should fail\nvar c : int := ^b\n"

---
"m"@(FileId(1), 7..8) [Declared]: <error>
"t"@(FileId(1), 41..42) [Resolved(Type)]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"a"@(FileId(1), 57..58) [Declared]: pointer to opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"b"@(FileId(1), 72..73) [Declared]: int
"t"@(FileId(1), 27..28) [ItemExport(LocalDefId(1))]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"a"@(FileId(1), 30..31) [ItemExport(LocalDefId(2))]: pointer to opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"b"@(FileId(1), 97..98) [Declared]: pointer to opaque[DefId(LibraryId(0), LocalDefId(1))] type to int
"c"@(FileId(1), 124..125) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 135..137: mismatched types
| note in file FileId(1) for 135..137: this is of type `t (an opaque type)`
| note in file FileId(1) for 128..131: this is of type `int`
| info: `t (an opaque type)` is not assignable into `int`
