compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_opaque_ty_poke_opaque_for_bounds_implicit.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "module m\n    export opaque t\n    type t : 1 .. 2\n    for _ : t end for\nend m\n\nfor _ : m.t end for\n"

---
"m"@(FileId(1), 7..8) [Declared]: <error>
"t"@(FileId(1), 38..39) [Resolved(Type)]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"_"@(FileId(1), 57..58) [Declared]: alias[DefId(LibraryId(0), LocalDefId(1))] of range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"t"@(FileId(1), 20..28) [ItemExport(LocalDefId(1))]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"_"@(FileId(1), 82..83) [Declared]: opaque[DefId(LibraryId(0), LocalDefId(1))] type to range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 86..89: mismatched types
| note in file FileId(1) for 86..89: this is of type `t (an opaque type)`
| error in file FileId(1) for 86..89: `t (an opaque type)` is not an index type
| info: range bound type must be an index type (an integer, `boolean`, `char`, enumerated type, or a range)
